WIP checkpoint 2026-09-27T21:29Z
